# sdr_uhd_pipeline

./: .gitignore  CMakeLists.txt
include/: queue.h
src/: consumer.cpp  consumer_usrp.cpp  main.cpp  producer.cpp  producer_usrp.cpp
